На stand'е реализованы отчеты в двух форматах без безопасности

--- a/sandbox.client/front/ts/app/client/client-details-component.html
+++ b/sandbox.client/front/ts/app/client/client-details-component.html
@@ -82,7 +82,7 @@
                    placeholder="Дата рождения"
                    name="birthdate"
                    onkeydown="return false"
-                   [min]="minStringDate"
+                   [max]="todayStringDate"
                    [max]="todayStringDate"
                    [(ngModel)]="clientDetails.birthdate">
           </div>
