--- a/sandbox.client/front/ts/app/clients_list/clients-list-component.html
+++ b/sandbox.client/front/ts/app/clients_list/clients-list-component.html
@@ -5,14 +5,13 @@
 
     <h2>Список клиентов</h2>
 
-    <form #f="ngForm" (submit)="filter(f)" novalidate>
+    <label for="filterForm">Искать</label>
+    <form #f="ngForm" (submit)="filter(f)" id="filterForm" novalidate>
         <div class="form-row">
             <div class="form-group col-md-3">
-                <label for="inputFilterVal">Фильтрация</label>
                 <input name="filtersInput" ngModel required #first="ngModel" type="text" class="form-control" id="inputFilterVal">
             </div>
             <div class="form-group col-md-2">
-                <label for="inputState">Тип</label>
                 <select name="filterBy" ngModel id="inputState" class="form-control">
                     <option selected>Фамилия</option>
                     <option>Имя</option>
@@ -20,12 +19,12 @@
                 </select>
             </div>
             <div class="form-group col-md-2">
-                <button type="submit" class="btn btn-primary">Искать</button>
+                <button type="submit" class="btn btn-primary">Поиск</button>
             </div>
         </div>
     </form>
 
-    <label>Показать
+    <label class="form-inline">Показать
         <select name="entryNum" id="entry-num" class="form-control input-sm">
             <option value="10">10</option>
             <option value="25">25</option>
@@ -34,20 +33,21 @@
         </select> входов
     </label>
 
+
     <div class="col-md-10">
     <table class="table table-hover" id="clientsListTable">
         <thead>
-        <tr>
+        <tr style="white-space:nowrap">
             <th>ФИО</th>
             <th>Характер</th>
-            <th>Возраст</th>
-            <th>Общий остаток счетов</th>
-            <th>Минимальный остаток</th>
-            <th>Максимальный остаток</th>
+            <th id="age">Возраст&nbsp;<span class="glyphicon glyphicon-sort"></span></th>
+            <th id="totalBalance">Общий остаток счетов&nbsp;<span class="glyphicon glyphicon-sort"></span></th>
+            <th id="minBalance">Минимальный остаток&nbsp;<span class="glyphicon glyphicon-sort"></span></th>
+            <th id="maxBalance">Максимальный остаток&nbsp;<span class="glyphicon glyphicon-sort"></span></th>
         </tr>
         </thead>
         <tbody>
-        <tr class="clickable-row" *ngFor="let client of clientsList">
+        <tr class="clickable-row" *ngFor="let client of clientsList; let i = index" id="{{i}}">
             <td>{{client.surname}} {{client.name}} {{client.patronymic}}</td>
             <td>{{client.charm}}</td>
             <td>{{client.age}}</td>
@@ -61,17 +61,17 @@
     </div>
     <div class="col-md-2">
         <p>
-            <button onclick="document.getElementById('id01').style.display='block'" type="button" class="btn btn-link">
+            <button id="add-client-btn" onclick="document.getElementById('id01').style.display='block'" type="button" class="btn btn-link">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
         </p>
         <p>
-            <button id="edit-button" type="button" class="btn btn-link" disabled>
+            <button onclick="document.getElementById('id01').style.display='block'" id="edit-button" type="button" class="btn btn-link" disabled>
                 <span class="glyphicon glyphicon-option-horizontal"></span>
             </button>
         </p>
         <p>
-            <button id="new-client-button" type="button" class="btn btn-link" disabled>
+            <button (click)="removeClient()" type="button" id="btn-remove" class="btn btn-link" disabled>
                 <span class="glyphicon glyphicon-minus"></span>
             </button>
         </p>
@@ -109,26 +109,26 @@
                     <h2 class="modal-title">Добавление нового пользователя</h2>
                 </div>
                 <div class="modal-body">
-                    <form #newClient="ngForm" (submit)="createNewClient(newClient)" id="newData" action="#">
+                    <form #newClient="ngForm" (submit)="modalFormSubmitted(newClient)" id="newData" action="#">
                         <div class="form-row">
                             <div class="form-group col-md-4">
                                 <label for="last-name">Фамилия</label>
-                                <input type="text" class="form-control" name="surname" ngModel id="last-name" placeholder="Фамилия">
+                                <input type="text" class="form-control" name="surname" ngModel id="last-name" placeholder="Фамилия" value="{{selectedClient.surname}}">
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="first-name">Имя</label>
-                                <input type="text" class="form-control" name="name" ngModel id="first-name" placeholder="Имя">
+                                <input type="text" class="form-control" name="name" ngModel id="first-name" placeholder="Имя" value="{{selectedClient.name}}">
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="patronymic">Отчество</label>
-                                <input type="text" class="form-control" name="patronymic" ngModel id="patronymic" placeholder="Отчество">
+                                <input type="text" class="form-control" name="patronymic" ngModel id="patronymic" placeholder="Отчество" value="{{selectedClient.patronymic}}">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-4">
                                 <label for="inputCharm">Характер</label>
                                 <select id="inputCharm" name="charm" ngModel class="form-control">
-                                    <option selected>Выбрать...</option>
+                                    <option selected>{{selectedClient.charm}}</option>
                                     <option>Уситчивый</option>
                                     <option>Агрессивный</option>
                                 </select>
@@ -142,68 +142,68 @@
                             </div>
                             <div class="form-group col-md-5">
                                 <label for="inputBirthDate">Дата рождения</label>
-                                <input type="date" name="dateOfBirth" ngModel class="form-control" id="inputBirthDate" max="2018-01-01" min="1900-01-01">
+                                <input type="date" name="dateOfBirth" ngModel class="form-control" id="inputBirthDate" min="1900-01-01" value="{{selectedClient.dateOfBirth}}">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-4">
                                 <label for="inputStreet">Улица</label>
-                                <input type="text" name="street1" ngModel class="form-control" id="inputStreet" placeholder="Улица">
+                                <input type="text" name="streetF" ngModel class="form-control" id="inputStreet" placeholder="Улица" value="{{selectedClient.addressF.street}}">
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="inputBuilding">Дом</label>
-                                <input type="number" name="building1" ngModel min="0" class="form-control" id="inputBuilding" placeholder="Дом">
+                                <input type="text" name="buildingF" ngModel class="form-control" id="inputBuilding" placeholder="Дом" value="{{selectedClient.addressF.building}}">
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="inputAprtm">Квартира</label>
-                                <input type="number" name="apartment1" ngModel min="0" class="form-control" id="inputAprtm" placeholder="Квартира">
+                                <input type="text" name="apartmentF" ngModel class="form-control" id="inputAprtm" placeholder="Квартира" value="{{selectedClient.addressF.apartment}}">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-4">
-                                <label for="inputStreetR">Улица</label>
-                                <input type="text" name="street2" ngModel class="form-control" id="inputStreetR" placeholder="Улица">
+                                <label for="streetF">Улица</label>
+                                <input type="text" name="streetR" ngModel class="form-control" id="streetF" placeholder="Улица" value="{{selectedClient.addressR.street}}">
                             </div>
                             <div class="form-group col-md-4">
-                                <label for="inputBuildingR">Дом</label>
-                                <input type="number" name="building2" ngModel min="0" class="form-control" id="inputBuildingR" placeholder="Дом">
+                                <label for="buildingF">Дом</label>
+                                <input type="text" name="buildingR" ngModel class="form-control" id="buildingF" placeholder="Дом" value="{{selectedClient.addressR.building}}">
                             </div>
                             <div class="form-group col-md-4">
-                                <label for="inputAprtmR">Квартира</label>
-                                <input type="number" name="apartment2" ngModel min="0" class="form-control" id="inputAprtmR" placeholder="Квартира">
+                                <label for="apartmentF">Квартира</label>
+                                <input type="text" name="apartmentR" ngModel class="form-control" id="apartmentF" placeholder="Квартира" value="{{selectedClient.addressR.apartment}}">
                             </div>
                         </div>
 
-                        <div class="form-row">
+                        <label for="phoneNumbers">Номер телефона</label>
+                        <div id="phoneNumbers" class="clickable-row" *ngFor="let phoneNumber of phoneNumbers; let i = index">
                             <div class="entry form-group">
-                            <div class=" col-md-4">
-                                <label for="inputPhoneType1">Тип телефона</label>
-                                <select id="inputPhoneType1" name="phoneType1" ngModel class="form-control">
-                                    <option selected>Выбрать...</option>
-                                    <option>Домашний</option>
-                                    <option>Рабочий</option>
-                                    <option>Мобильный</option>
-                                </select>
-                            </div>
-                            <div class="input-group col-md-8">
-                                <label for="inputPhoneNumber1">Номер телефона</label>
-                                <input type="text" class="form-control" name="phoneNumber" ngModel id="inputPhoneNumber1" placeholder="Номер телефона">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-success btn-add" type="button">
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                    </button>
-                                </span>
-                            </div>
+                                <div class=" col-md-4">
+                                    <select [ngModel]="phoneNumber.phoneType" name="phoneType{{i}}" class="form-control">
+                                        <option [ngValue]="i" *ngFor="let i of keys()">{{phoneType[i]}}</option>
+                                    </select>
+                                </div>
+                                <div class="input-group col-md-8">
+                                    <input type="text" class="form-control" name="phoneNumber{{i}}" ngModel placeholder="Номер телефона" [ngModel]="phoneNumber.number">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-success btn-add" type="button" (click)="addPhoneNumber()">
+                                            <span class="glyphicon glyphicon-plus"></span>
+                                        </button>
+                                        <button class="btn btn-danger btn-remove" type="button" (click)="removePhoneNumber(i)">
+                                            <span class="glyphicon glyphicon-minus"></span>
+                                        </button>
+                                    </span>
+                                </div>
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Добавить</button>
+                        <button type="submit" class="btn btn-primary" id="modal-form-submit">Добавить</button>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button onclick="document.getElementById('id01').style.display='none'" type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
+                    <button id="cancel-modal-submit" type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
